// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IgaGlossaryOps createGlossarySchema() 1: Create Glossary Schema Export Template 1`] = `
{
  "allowedValues": [],
  "description": "Test Role Description",
  "displayName": "Test Role Display Name",
  "enumeratedValues": [],
  "id": "271c3863-034a-4f1b-9d6e-48206b969871",
  "isMultiValue": false,
  "managedObjectType": "/openidm/managed/role",
  "name": "testRole",
  "objectType": "/openidm/managed/assignment",
  "searchable": false,
  "type": "managedObject",
}
`;

exports[`IgaGlossaryOps createGlossarySchemaExportTemplate() 1: Create Glossary Schema Export Template 1`] = `
{
  "glossarySchema": {},
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps deleteGlossarySchema() 1: Delete existing glossary schema by id 1`] = `
{
  "allowedValues": [],
  "description": "Test Organization Description",
  "displayName": "Test Organization Display Name",
  "enumeratedValues": [],
  "id": "2133dfb9-7af2-4543-bcc5-74a884053b18",
  "isMultiValue": false,
  "managedObjectType": "/openidm/managed/organization",
  "metadata": {
    "createdDate": "2026-01-21T21:25:56.185811775Z",
    "modifiedDate": "2026-01-21T21:25:56.185812715Z",
  },
  "name": "testOrg",
  "objectType": "/openidm/managed/assignment",
  "searchable": false,
  "type": "managedObject",
}
`;

exports[`IgaGlossaryOps deleteGlossarySchemaByNameAndObjectType() 1: Delete existing glossary schema by name 1`] = `
{
  "allowedValues": [],
  "description": "Test User Description",
  "displayName": "Test User Display Name",
  "enumeratedValues": [],
  "id": "dd2f3e74-2509-4d4c-b7f6-c812f2bb4ad2",
  "isMultiValue": false,
  "managedObjectType": "/openidm/managed/user",
  "metadata": {
    "createdDate": "2026-01-21T21:25:57.058901461Z",
    "modifiedDate": "2026-01-21T21:25:57.058903161Z",
  },
  "name": "testUser",
  "objectType": "/openidm/managed/assignment",
  "searchable": false,
  "type": "managedObject",
}
`;

exports[`IgaGlossaryOps exportGlossarySchema() 1: Export existing glossary schema by ID 1`] = `
{
  "glossarySchema": {
    "4332b18f-ad0a-4b16-abd5-af13bede31ae": {
      "allowedValues": [],
      "description": "Test Boolean Description",
      "displayName": "Test Boolean Display Name",
      "enumeratedValues": [],
      "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-21T21:25:52.866245593Z",
        "modifiedDate": "2026-01-21T21:25:52.866247223Z",
      },
      "name": "testBoolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps exportGlossarySchemaByNameAndObjectType() 1: Export existing glossary schema by name and objectype 1`] = `
{
  "glossarySchema": {
    "4332b18f-ad0a-4b16-abd5-af13bede31ae": {
      "allowedValues": [],
      "description": "Test Boolean Description",
      "displayName": "Test Boolean Display Name",
      "enumeratedValues": [],
      "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-21T21:25:52.866245593Z",
        "modifiedDate": "2026-01-21T21:25:52.866247223Z",
      },
      "name": "testBoolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps exportGlossarySchemas() 1: Export existing glossary schemas without internal 1`] = `
{
  "glossarySchema": {
    "0312246d-657e-4fd1-828e-70d50e7a5eaf": {
      "allowedValues": [],
      "description": "Test Organization Description",
      "displayName": "Test Organization Display Name",
      "enumeratedValues": [],
      "id": "0312246d-657e-4fd1-828e-70d50e7a5eaf",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/organization",
      "metadata": {
        "createdDate": "2026-01-30T00:10:50.725249201Z",
        "modifiedDate": "2026-01-30T00:10:50.72525101Z",
      },
      "name": "testOrg",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "0d124ac8-504b-465e-8c0d-df0ace6d37ae": {
      "allowedValues": [
        "Text One",
        "Text Two",
        "Text Three",
      ],
      "description": "Test String Description",
      "displayName": "Test String Display Name",
      "enumeratedValues": [
        {
          "text": "text1",
          "value": "Text One",
        },
        {
          "text": "text2",
          "value": "Text Two",
        },
        {
          "text": "text3",
          "value": "Text Three",
        },
      ],
      "id": "0d124ac8-504b-465e-8c0d-df0ace6d37ae",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-30T00:10:49.6037985Z",
        "modifiedDate": "2026-01-30T00:10:49.60379966Z",
      },
      "name": "testString",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "1adef4e6-accc-480c-9ff8-147171de8ee4": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "1adef4e6-accc-480c-9ff8-147171de8ee4",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:34:34.271336735Z",
        "modifiedDate": "2025-11-15T04:34:34.271338995Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "2a1017db-6a09-4562-b73e-fdb706bd212c": {
      "allowedValues": [
        "sales",
        "finance",
        "hr",
        "null",
      ],
      "description": "Application grant workflows example for LOB determines who it should go to",
      "displayName": "Line Of Business",
      "enumeratedValues": [
        {
          "text": "Sales",
          "value": "sales",
        },
        {
          "text": "Finance",
          "value": "finance",
        },
        {
          "text": "Human Resources",
          "value": "hr",
        },
        {
          "text": "Other",
          "value": "null",
        },
      ],
      "id": "2a1017db-6a09-4562-b73e-fdb706bd212c",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:31:18.709667735Z",
        "modifiedDate": "2025-11-15T04:31:18.709668985Z",
      },
      "name": "lineOfBusiness",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "391eeaf3-1b72-4db2-a1fb-7854d8d1b365": {
      "allowedValues": [],
      "description": "Test Boolean Description",
      "displayName": "Test Boolean Display Name",
      "enumeratedValues": [],
      "id": "391eeaf3-1b72-4db2-a1fb-7854d8d1b365",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-30T00:10:48.093585532Z",
        "modifiedDate": "2026-01-30T00:10:48.093586532Z",
      },
      "name": "testBoolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
    "43d40e1b-95b9-4377-b40e-2d5045ec5405": {
      "allowedValues": [
        0,
        1,
        2,
      ],
      "description": "Test Integer Description",
      "displayName": "Test Integer Display Name",
      "enumeratedValues": [
        {
          "text": 1,
          "value": 0,
        },
        {
          "text": 2,
          "value": 1,
        },
        {
          "text": 3,
          "value": 2,
        },
      ],
      "id": "43d40e1b-95b9-4377-b40e-2d5045ec5405",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-30T00:10:48.602902021Z",
        "modifiedDate": "2026-01-30T00:10:48.602903051Z",
      },
      "name": "testInteger",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "integer",
    },
    "5e9a4da3-612c-4f4b-a1d6-5b65aa5a242a": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "5e9a4da3-612c-4f4b-a1d6-5b65aa5a242a",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:32:41.87757229Z",
        "modifiedDate": "2025-11-15T04:32:41.87757368Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "61cc57f7-adc5-4db5-952a-82750f16dc7a": {
      "allowedValues": [],
      "description": "Test User",
      "displayName": "Test User",
      "enumeratedValues": [],
      "id": "61cc57f7-adc5-4db5-952a-82750f16dc7a",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2026-01-05T23:57:38.461977852Z",
        "modifiedDate": "2026-01-05T23:57:38.461978072Z",
      },
      "name": "Test User",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "7375e4a5-709c-4cec-b588-d4418b9d4d06": {
      "allowedValues": [
        1.5,
        3.5,
      ],
      "description": "Test Double",
      "displayName": "Test Double",
      "enumeratedValues": [
        {
          "text": 0.5,
          "value": 1.5,
        },
        {
          "text": 2.5,
          "value": 3.5,
        },
      ],
      "id": "7375e4a5-709c-4cec-b588-d4418b9d4d06",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-05T23:56:43.81662401Z",
        "modifiedDate": "2026-01-05T23:56:43.8166248Z",
      },
      "name": "Test Double",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "integer",
    },
    "8a7a8612-38bc-453c-969e-99ebced2bf47": {
      "allowedValues": [],
      "description": "Test Date",
      "displayName": "Test Date",
      "enumeratedValues": [],
      "id": "8a7a8612-38bc-453c-969e-99ebced2bf47",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-05T23:57:27.599681613Z",
        "modifiedDate": "2026-01-12T17:37:13.694Z",
      },
      "name": "Test Date",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "date",
    },
    "97d02b06-0c26-4903-8d0a-02ef4326e45e": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "97d02b06-0c26-4903-8d0a-02ef4326e45e",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:36:21.999006557Z",
        "modifiedDate": "2025-11-15T04:36:21.999008468Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "ab1479b4-aff3-4b13-a8c4-16f617de4a37": {
      "allowedValues": [],
      "description": "Test User Description",
      "displayName": "Test User Display Name",
      "enumeratedValues": [],
      "id": "ab1479b4-aff3-4b13-a8c4-16f617de4a37",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2026-01-30T00:10:51.59913231Z",
        "modifiedDate": "2026-01-30T00:10:51.59913429Z",
      },
      "name": "testUser",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "c0d06566-9970-403f-b3da-7934f5038cdf": {
      "allowedValues": [],
      "description": "Test Role",
      "displayName": "Test Role",
      "enumeratedValues": [],
      "id": "c0d06566-9970-403f-b3da-7934f5038cdf",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/role",
      "metadata": {
        "createdDate": "2026-01-05T23:57:48.952302776Z",
        "modifiedDate": "2026-01-05T23:57:48.952303426Z",
      },
      "name": "Test Role",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "c5a899bb-9e14-416b-8334-38b15b85c481": {
      "allowedValues": [
        "Value 1",
        "Value 2",
      ],
      "description": "Test String",
      "displayName": "Test String",
      "enumeratedValues": [
        {
          "text": "Text 1",
          "value": "Value 1",
        },
        {
          "text": "Text 2",
          "value": "Value 2",
        },
      ],
      "id": "c5a899bb-9e14-416b-8334-38b15b85c481",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-05T23:55:24.106927059Z",
        "modifiedDate": "2026-01-05T23:55:24.106927859Z",
      },
      "name": "Test String",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "c865c5e0-ea91-4a6d-8ecf-ed106d8a96a8": {
      "allowedValues": [
        "high",
        "medium",
        "low",
        "null",
      ],
      "description": "",
      "displayName": "Risk Level",
      "enumeratedValues": [
        {
          "text": "High",
          "value": "high",
        },
        {
          "text": "Medium",
          "value": "medium",
        },
        {
          "text": "Low",
          "value": "low",
        },
        {
          "text": "Other",
          "value": "null",
        },
      ],
      "id": "c865c5e0-ea91-4a6d-8ecf-ed106d8a96a8",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:35:38.004567499Z",
        "modifiedDate": "2025-11-15T04:35:38.004568899Z",
      },
      "name": "riskLevel",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "cf2c7d75-4dc8-464e-959b-99b157b5176f": {
      "allowedValues": [],
      "description": "Testing",
      "displayName": "CP Dummy Entitlement",
      "enumeratedValues": [],
      "id": "cf2c7d75-4dc8-464e-959b-99b157b5176f",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-06T18:31:50.614010455Z",
        "modifiedDate": "2026-01-06T18:32:02.151Z",
      },
      "name": "CP-DummyEntitlement",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "dad7d3b0-208f-464d-9857-243dc1cb14d1": {
      "allowedValues": [],
      "description": "Test Organization",
      "displayName": "Test Organization",
      "enumeratedValues": [],
      "id": "dad7d3b0-208f-464d-9857-243dc1cb14d1",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/organization",
      "metadata": {
        "createdDate": "2026-01-05T23:57:59.512417969Z",
        "modifiedDate": "2026-01-05T23:57:59.512418849Z",
      },
      "name": "Test Organization",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "e5677d73-4c84-46a4-bf0c-a01590db8b74": {
      "allowedValues": [],
      "description": "",
      "displayName": "Is Privileged",
      "enumeratedValues": [],
      "id": "e5677d73-4c84-46a4-bf0c-a01590db8b74",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:33:33.242372625Z",
        "modifiedDate": "2025-11-15T04:33:33.242373765Z",
      },
      "name": "isPrivileged",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "boolean",
    },
    "f612d95d-7e9e-4ddb-8259-af0eb96f0714": {
      "allowedValues": [
        1,
        2,
      ],
      "description": "Test Integer",
      "displayName": "Test Integer",
      "enumeratedValues": [
        {
          "text": 0,
          "value": 1,
        },
        {
          "text": 1,
          "value": 2,
        },
      ],
      "id": "f612d95d-7e9e-4ddb-8259-af0eb96f0714",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-05T23:56:09.72294817Z",
        "modifiedDate": "2026-01-05T23:56:09.72294885Z",
      },
      "name": "Test Integer",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "integer",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps exportGlossarySchemas() 2: Export existing glossary schemas with internal 1`] = `
{
  "glossarySchema": {
    "021ed7cf-116b-4003-9a63-a82431e44c8e": {
      "description": "custom attribute 1",
      "displayName": "Custom Attribute 6",
      "enumeratedValues": [],
      "id": "021ed7cf-116b-4003-9a63-a82431e44c8e",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:34.91522564Z",
        "modifiedDate": "2025-10-27T18:13:34.91523189Z",
      },
      "name": "customAttribute6",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "0312246d-657e-4fd1-828e-70d50e7a5eaf": {
      "allowedValues": [],
      "description": "Test Organization Description",
      "displayName": "Test Organization Display Name",
      "enumeratedValues": [],
      "id": "0312246d-657e-4fd1-828e-70d50e7a5eaf",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/organization",
      "metadata": {
        "createdDate": "2026-01-30T00:10:50.725249201Z",
        "modifiedDate": "2026-01-30T00:10:50.72525101Z",
      },
      "name": "testOrg",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "0806c0c5-a6e9-4ec8-8a36-830f217637b3": {
      "allowedValues": [],
      "description": "Can the role be requested",
      "displayName": "Requestable",
      "id": "0806c0c5-a6e9-4ec8-8a36-830f217637b3",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": null,
      "metadata": {
        "createdDate": "2025-10-27T18:26:04.308367768Z",
        "modifiedDate": "2025-10-27T18:26:04.308373548Z",
      },
      "name": "requestable",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
    "09c470af-abc5-4733-beaf-3d169b62a234": {
      "description": "Actors for the account",
      "displayName": "Actors",
      "enumeratedValues": [],
      "id": "09c470af-abc5-4733-beaf-3d169b62a234",
      "isInternal": true,
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2025-10-27T18:13:19.780130996Z",
        "modifiedDate": "2025-10-27T18:13:19.780138236Z",
      },
      "name": "actors",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "0d124ac8-504b-465e-8c0d-df0ace6d37ae": {
      "allowedValues": [
        "Text One",
        "Text Two",
        "Text Three",
      ],
      "description": "Test String Description",
      "displayName": "Test String Display Name",
      "enumeratedValues": [
        {
          "text": "text1",
          "value": "Text One",
        },
        {
          "text": "text2",
          "value": "Text Two",
        },
        {
          "text": "text3",
          "value": "Text Three",
        },
      ],
      "id": "0d124ac8-504b-465e-8c0d-df0ace6d37ae",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-30T00:10:49.6037985Z",
        "modifiedDate": "2026-01-30T00:10:49.60379966Z",
      },
      "name": "testString",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "0e1f922f-c9b9-40f2-964b-740f0ad47afb": {
      "description": "Risk Score",
      "displayName": "Risk Score",
      "enumeratedValues": [],
      "id": "0e1f922f-c9b9-40f2-964b-740f0ad47afb",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:28.850616006Z",
        "modifiedDate": "2025-10-27T18:13:28.850623326Z",
      },
      "name": "riskScore",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "float",
    },
    "0e9d9615-666b-4ae5-b6f3-43c6c1b6708e": {
      "allowedValues": [],
      "description": "Description of entitlement",
      "displayName": "Description",
      "id": "0e9d9615-666b-4ae5-b6f3-43c6c1b6708e",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": null,
      "metadata": {
        "createdDate": "2025-10-27T18:26:00.277228797Z",
        "modifiedDate": "2025-10-27T18:26:00.277235677Z",
      },
      "name": "description",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "12e51982-56a4-4f3d-9db1-2529276e2a05": {
      "description": "Is this account locked?",
      "displayName": "Locked",
      "enumeratedValues": [],
      "id": "12e51982-56a4-4f3d-9db1-2529276e2a05",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:21.772411471Z",
        "modifiedDate": "2025-10-27T18:13:21.772418601Z",
      },
      "name": "locked",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "1683c30a-b149-4bab-8187-5a67b0fe3704": {
      "description": "custom attribute 1",
      "displayName": "Custom Attribute 2",
      "enumeratedValues": [],
      "id": "1683c30a-b149-4bab-8187-5a67b0fe3704",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:30.903463463Z",
        "modifiedDate": "2025-10-27T18:13:30.903491063Z",
      },
      "name": "customAttribute2",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "19e40504-7f0b-4df9-9ceb-bf23c0e3fda3": {
      "description": "Type of entitlement",
      "displayName": "Entitlement Type",
      "enumeratedValues": [],
      "id": "19e40504-7f0b-4df9-9ceb-bf23c0e3fda3",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:14:04.021339488Z",
        "modifiedDate": "2025-10-27T18:14:04.021344897Z",
      },
      "name": "entitlementType",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "1adef4e6-accc-480c-9ff8-147171de8ee4": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "1adef4e6-accc-480c-9ff8-147171de8ee4",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:34:34.271336735Z",
        "modifiedDate": "2025-11-15T04:34:34.271338995Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "2a1017db-6a09-4562-b73e-fdb706bd212c": {
      "allowedValues": [
        "sales",
        "finance",
        "hr",
        "null",
      ],
      "description": "Application grant workflows example for LOB determines who it should go to",
      "displayName": "Line Of Business",
      "enumeratedValues": [
        {
          "text": "Sales",
          "value": "sales",
        },
        {
          "text": "Finance",
          "value": "finance",
        },
        {
          "text": "Human Resources",
          "value": "hr",
        },
        {
          "text": "Other",
          "value": "null",
        },
      ],
      "id": "2a1017db-6a09-4562-b73e-fdb706bd212c",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:31:18.709667735Z",
        "modifiedDate": "2025-11-15T04:31:18.709668985Z",
      },
      "name": "lineOfBusiness",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "2a36a687-91c0-4fdc-8c73-b001618c2bc6": {
      "description": "custom attribute 8",
      "displayName": "Custom Attribute 8",
      "enumeratedValues": [],
      "id": "2a36a687-91c0-4fdc-8c73-b001618c2bc6",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:36.931921121Z",
        "modifiedDate": "2025-10-27T18:13:36.931928051Z",
      },
      "name": "customAttribute8",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "2a9ce603-14d8-4689-8b2e-78829648b5b6": {
      "description": "custom attribute 5",
      "displayName": "Custom Attribute 5",
      "enumeratedValues": [],
      "id": "2a9ce603-14d8-4689-8b2e-78829648b5b6",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:33.925339896Z",
        "modifiedDate": "2025-10-27T18:13:33.925347816Z",
      },
      "name": "customAttribute5",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "35094c80-ab3d-4c47-91ae-92175895b264": {
      "description": "Confidence Score",
      "displayName": "Confidence Score",
      "enumeratedValues": [],
      "id": "35094c80-ab3d-4c47-91ae-92175895b264",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:27.843796005Z",
        "modifiedDate": "2025-10-27T18:13:27.843802734Z",
      },
      "name": "confidenceScore",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "float",
    },
    "391eeaf3-1b72-4db2-a1fb-7854d8d1b365": {
      "allowedValues": [],
      "description": "Test Boolean Description",
      "displayName": "Test Boolean Display Name",
      "enumeratedValues": [],
      "id": "391eeaf3-1b72-4db2-a1fb-7854d8d1b365",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-30T00:10:48.093585532Z",
        "modifiedDate": "2026-01-30T00:10:48.093586532Z",
      },
      "name": "testBoolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
    "43d40e1b-95b9-4377-b40e-2d5045ec5405": {
      "allowedValues": [
        0,
        1,
        2,
      ],
      "description": "Test Integer Description",
      "displayName": "Test Integer Display Name",
      "enumeratedValues": [
        {
          "text": 1,
          "value": 0,
        },
        {
          "text": 2,
          "value": 1,
        },
        {
          "text": 3,
          "value": 2,
        },
      ],
      "id": "43d40e1b-95b9-4377-b40e-2d5045ec5405",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-30T00:10:48.602902021Z",
        "modifiedDate": "2026-01-30T00:10:48.602903051Z",
      },
      "name": "testInteger",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "integer",
    },
    "5807928e-804d-4fed-a887-33fd3d157a8f": {
      "allowedValues": [],
      "description": "Entitlement Owner of Object",
      "displayName": "Entitlement Owner",
      "id": "5807928e-804d-4fed-a887-33fd3d157a8f",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2025-10-27T18:26:01.270155621Z",
        "modifiedDate": "2025-10-27T18:26:01.270163381Z",
      },
      "name": "entitlementOwner",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "managedObject",
    },
    "5c5751e7-d0e3-4338-a198-ecfe33175ed6": {
      "allowedValues": [],
      "description": "Can the entitlement be requested",
      "displayName": "Requestable",
      "id": "5c5751e7-d0e3-4338-a198-ecfe33175ed6",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": null,
      "metadata": {
        "createdDate": "2025-10-27T18:26:02.398398257Z",
        "modifiedDate": "2025-10-27T18:26:02.398403587Z",
      },
      "name": "requestable",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "boolean",
    },
    "5e9a4da3-612c-4f4b-a1d6-5b65aa5a242a": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "5e9a4da3-612c-4f4b-a1d6-5b65aa5a242a",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:32:41.87757229Z",
        "modifiedDate": "2025-11-15T04:32:41.87757368Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "string",
    },
    "5ef5a92e-c2e4-40e4-b232-e33649591b37": {
      "description": "The subtype of the account",
      "displayName": "Account Subtype",
      "enumeratedValues": [],
      "id": "5ef5a92e-c2e4-40e4-b232-e33649591b37",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:40.980726934Z",
        "modifiedDate": "2025-10-27T18:13:40.980781544Z",
      },
      "name": "accountSubtype",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "61bf2199-c60a-4383-9457-2fe211d72c85": {
      "description": "Last password change date",
      "displayName": "Last Password Change",
      "enumeratedValues": [],
      "id": "61bf2199-c60a-4383-9457-2fe211d72c85",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:26.820775485Z",
        "modifiedDate": "2025-10-27T18:13:26.820782975Z",
      },
      "name": "lastPasswordChange",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "date",
    },
    "61cc57f7-adc5-4db5-952a-82750f16dc7a": {
      "allowedValues": [],
      "description": "Test User",
      "displayName": "Test User",
      "enumeratedValues": [],
      "id": "61cc57f7-adc5-4db5-952a-82750f16dc7a",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2026-01-05T23:57:38.461977852Z",
        "modifiedDate": "2026-01-05T23:57:38.461978072Z",
      },
      "name": "Test User",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "6a1ea40d-d85d-4646-9331-73a048196fbf": {
      "description": "Does the account have any SoD violations?",
      "displayName": "Has Policy Violations",
      "enumeratedValues": [],
      "id": "6a1ea40d-d85d-4646-9331-73a048196fbf",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:25.811651105Z",
        "modifiedDate": "2025-10-27T18:13:25.811658965Z",
      },
      "name": "hasPolicyViolations",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "71c188ff-ed53-438c-9476-043cba6e850b": {
      "description": "Is this account an active account",
      "displayName": "Active",
      "enumeratedValues": [],
      "id": "71c188ff-ed53-438c-9476-043cba6e850b",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:20.774670219Z",
        "modifiedDate": "2025-10-27T18:13:20.774676549Z",
      },
      "name": "active",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "7375e4a5-709c-4cec-b588-d4418b9d4d06": {
      "allowedValues": [
        1.5,
        3.5,
      ],
      "description": "Test Double",
      "displayName": "Test Double",
      "enumeratedValues": [
        {
          "text": 0.5,
          "value": 1.5,
        },
        {
          "text": 2.5,
          "value": 3.5,
        },
      ],
      "id": "7375e4a5-709c-4cec-b588-d4418b9d4d06",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-05T23:56:43.81662401Z",
        "modifiedDate": "2026-01-05T23:56:43.8166248Z",
      },
      "name": "Test Double",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "integer",
    },
    "774d2515-6cb4-408d-bdae-63b7534dde39": {
      "allowedValues": [],
      "description": "Test Boolean",
      "displayName": "Test Boolean",
      "enumeratedValues": [],
      "id": "774d2515-6cb4-408d-bdae-63b7534dde39",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-05T23:57:19.037709455Z",
        "modifiedDate": "2026-01-06T17:20:07.542Z",
      },
      "name": "Test Boolean",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "boolean",
    },
    "8994aea6-96d7-4070-bb1b-f8f36576a23e": {
      "description": "custom attribute 1",
      "displayName": "Custom Attribute 3",
      "enumeratedValues": [],
      "id": "8994aea6-96d7-4070-bb1b-f8f36576a23e",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:31.887340456Z",
        "modifiedDate": "2025-10-27T18:13:31.887347207Z",
      },
      "name": "customAttribute3",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "8a7a8612-38bc-453c-969e-99ebced2bf47": {
      "allowedValues": [],
      "description": "Test Date",
      "displayName": "Test Date",
      "enumeratedValues": [],
      "id": "8a7a8612-38bc-453c-969e-99ebced2bf47",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-05T23:57:27.599681613Z",
        "modifiedDate": "2026-01-12T17:37:13.694Z",
      },
      "name": "Test Date",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "date",
    },
    "97d02b06-0c26-4903-8d0a-02ef4326e45e": {
      "allowedValues": [
        "yes",
        "no",
      ],
      "description": "",
      "displayName": "Is Sensitive",
      "enumeratedValues": [
        {
          "text": "Yes",
          "value": "yes",
        },
        {
          "text": "No",
          "value": "no",
        },
      ],
      "id": "97d02b06-0c26-4903-8d0a-02ef4326e45e",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:36:21.999006557Z",
        "modifiedDate": "2025-11-15T04:36:21.999008468Z",
      },
      "name": "sensitive",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "982113c6-3e20-401d-91a8-657cf429f85e": {
      "description": "Is this account a privileged account",
      "displayName": "Privileged",
      "enumeratedValues": [],
      "id": "982113c6-3e20-401d-91a8-657cf429f85e",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:18.776130434Z",
        "modifiedDate": "2025-10-27T18:13:18.776137014Z",
      },
      "name": "privileged",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "a65b7633-3dcb-4c83-8458-c14397f70715": {
      "description": "Confidence Score",
      "displayName": "Confidence Score",
      "enumeratedValues": [],
      "id": "a65b7633-3dcb-4c83-8458-c14397f70715",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:41.990680485Z",
        "modifiedDate": "2025-10-27T18:13:41.990686335Z",
      },
      "name": "confidenceScore",
      "objectType": "/iga/governance/entitlementGrant",
      "searchable": true,
      "type": "float",
    },
    "a65b7633-3dcb-4c83-8458-c14397f70717": {
      "description": "custom attribute 10",
      "displayName": "Custom Attribute 10",
      "enumeratedValues": [],
      "id": "a65b7633-3dcb-4c83-8458-c14397f70717",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:38.983976209Z",
        "modifiedDate": "2025-10-27T18:13:38.983985449Z",
      },
      "name": "customAttribute10",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "a7082d02-e673-4935-95d5-22c76c669cb4": {
      "allowedValues": [],
      "description": "Can the application be requested",
      "displayName": "Requestable",
      "id": "a7082d02-e673-4935-95d5-22c76c669cb4",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": null,
      "metadata": {
        "createdDate": "2025-10-27T18:26:03.309691431Z",
        "modifiedDate": "2025-10-27T18:26:03.309696751Z",
      },
      "name": "requestable",
      "objectType": "/openidm/managed/application",
      "searchable": true,
      "type": "boolean",
    },
    "a98091ec-0800-41ec-9ca0-4f5ec4f4a853": {
      "description": "Is this account manuallyCorrelated",
      "displayName": "Manually Correlated",
      "enumeratedValues": [],
      "id": "a98091ec-0800-41ec-9ca0-4f5ec4f4a853",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:23.798074722Z",
        "modifiedDate": "2025-10-27T18:13:23.798082492Z",
      },
      "name": "manuallyCorrelated",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "boolean",
    },
    "ab1479b4-aff3-4b13-a8c4-16f617de4a37": {
      "allowedValues": [],
      "description": "Test User Description",
      "displayName": "Test User Display Name",
      "enumeratedValues": [],
      "id": "ab1479b4-aff3-4b13-a8c4-16f617de4a37",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2026-01-30T00:10:51.59913231Z",
        "modifiedDate": "2026-01-30T00:10:51.59913429Z",
      },
      "name": "testUser",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "managedObject",
    },
    "b0bee61a-791b-44bf-a3b9-b6fec52df4f7": {
      "description": "Entitlement that is the direct parent of this entitlement",
      "displayName": "Parent Entitlement",
      "enumeratedValues": [],
      "id": "b0bee61a-791b-44bf-a3b9-b6fec52df4f7",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:14:03.579746339Z",
        "modifiedDate": "2025-10-27T18:14:03.579750768Z",
      },
      "name": "parentEntitlement",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "b1f1f37a-4134-43cd-8220-957cefbbe44e": {
      "description": "custom attribute 4",
      "displayName": "Custom Attribute 4",
      "enumeratedValues": [],
      "id": "b1f1f37a-4134-43cd-8220-957cefbbe44e",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:32.900052397Z",
        "modifiedDate": "2025-10-27T18:13:32.900063547Z",
      },
      "name": "customAttribute4",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "b42b143f-b33b-4b25-9448-2c9ff88e7ed5": {
      "description": "custom attribute 7",
      "displayName": "Custom Attribute 7",
      "enumeratedValues": [],
      "id": "b42b143f-b33b-4b25-9448-2c9ff88e7ed5",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:35.92383714Z",
        "modifiedDate": "2025-10-27T18:13:35.923853001Z",
      },
      "name": "customAttribute7",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "bab632ff-9e7a-4a9d-a91b-c081ce091df7": {
      "description": "Show last successful Login",
      "displayName": "Last Successful Login",
      "enumeratedValues": [],
      "id": "bab632ff-9e7a-4a9d-a91b-c081ce091df7",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:22.790654101Z",
        "modifiedDate": "2025-10-27T18:13:22.790660471Z",
      },
      "name": "lastSuccessfulLogin",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "date",
    },
    "c0d06566-9970-403f-b3da-7934f5038cdf": {
      "allowedValues": [],
      "description": "Test Role",
      "displayName": "Test Role",
      "enumeratedValues": [],
      "id": "c0d06566-9970-403f-b3da-7934f5038cdf",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/role",
      "metadata": {
        "createdDate": "2026-01-05T23:57:48.952302776Z",
        "modifiedDate": "2026-01-05T23:57:48.952303426Z",
      },
      "name": "Test Role",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "c5a899bb-9e14-416b-8334-38b15b85c481": {
      "allowedValues": [
        "Value 1",
        "Value 2",
      ],
      "description": "Test String",
      "displayName": "Test String",
      "enumeratedValues": [
        {
          "text": "Text 1",
          "value": "Value 1",
        },
        {
          "text": "Text 2",
          "value": "Value 2",
        },
      ],
      "id": "c5a899bb-9e14-416b-8334-38b15b85c481",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-05T23:55:24.106927059Z",
        "modifiedDate": "2026-01-05T23:55:24.106927859Z",
      },
      "name": "Test String",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "c865c5e0-ea91-4a6d-8ecf-ed106d8a96a8": {
      "allowedValues": [
        "high",
        "medium",
        "low",
        "null",
      ],
      "description": "",
      "displayName": "Risk Level",
      "enumeratedValues": [
        {
          "text": "High",
          "value": "high",
        },
        {
          "text": "Medium",
          "value": "medium",
        },
        {
          "text": "Low",
          "value": "low",
        },
        {
          "text": "Other",
          "value": "null",
        },
      ],
      "id": "c865c5e0-ea91-4a6d-8ecf-ed106d8a96a8",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:35:38.004567499Z",
        "modifiedDate": "2025-11-15T04:35:38.004568899Z",
      },
      "name": "riskLevel",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "string",
    },
    "c8ed99f7-5442-43d5-8406-f39060c1bd73": {
      "description": "The type of account",
      "displayName": "Account Type",
      "enumeratedValues": [],
      "id": "c8ed99f7-5442-43d5-8406-f39060c1bd73",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:39.982168872Z",
        "modifiedDate": "2025-10-27T18:13:39.982176142Z",
      },
      "name": "accountType",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "c9647722-5927-4826-9398-5349b56f793a": {
      "description": "custom attribute 9",
      "displayName": "Custom Attribute 9",
      "enumeratedValues": [],
      "id": "c9647722-5927-4826-9398-5349b56f793a",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:37.946863301Z",
        "modifiedDate": "2025-10-27T18:13:37.946870841Z",
      },
      "name": "customAttribute9",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "cf2c7d75-4dc8-464e-959b-99b157b5176f": {
      "allowedValues": [],
      "description": "Testing",
      "displayName": "CP Dummy Entitlement",
      "enumeratedValues": [],
      "id": "cf2c7d75-4dc8-464e-959b-99b157b5176f",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2026-01-06T18:31:50.614010455Z",
        "modifiedDate": "2026-01-06T18:32:02.151Z",
      },
      "name": "CP-DummyEntitlement",
      "objectType": "/openidm/managed/assignment",
      "searchable": true,
      "type": "string",
    },
    "d4cf00ae-f4b3-42b8-b2a6-b960a8d620dc": {
      "description": "custom attribute 1",
      "displayName": "Custom Attribute 1",
      "enumeratedValues": [],
      "id": "d4cf00ae-f4b3-42b8-b2a6-b960a8d620dc",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:29.870208095Z",
        "modifiedDate": "2025-10-27T18:13:29.870215705Z",
      },
      "name": "customAttribute1",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "string",
    },
    "dad7d3b0-208f-464d-9857-243dc1cb14d1": {
      "allowedValues": [],
      "description": "Test Organization",
      "displayName": "Test Organization",
      "enumeratedValues": [],
      "id": "dad7d3b0-208f-464d-9857-243dc1cb14d1",
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/organization",
      "metadata": {
        "createdDate": "2026-01-05T23:57:59.512417969Z",
        "modifiedDate": "2026-01-05T23:57:59.512418849Z",
      },
      "name": "Test Organization",
      "objectType": "/openidm/managed/role",
      "searchable": false,
      "type": "managedObject",
    },
    "de06ffdb-0186-4fff-b1a9-ab26a1aa3fab": {
      "description": "When was account reconciled successfully",
      "displayName": "Last Sync",
      "enumeratedValues": [],
      "id": "de06ffdb-0186-4fff-b1a9-ab26a1aa3fab",
      "isInternal": true,
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-10-27T18:13:24.803517454Z",
        "modifiedDate": "2025-10-27T18:13:24.803524294Z",
      },
      "name": "lastSync",
      "objectType": "/iga/governance/account",
      "searchable": true,
      "type": "date",
    },
    "e5677d73-4c84-46a4-bf0c-a01590db8b74": {
      "allowedValues": [],
      "description": "",
      "displayName": "Is Privileged",
      "enumeratedValues": [],
      "id": "e5677d73-4c84-46a4-bf0c-a01590db8b74",
      "isMultiValue": false,
      "metadata": {
        "createdDate": "2025-11-15T04:33:33.242372625Z",
        "modifiedDate": "2025-11-15T04:33:33.242373765Z",
      },
      "name": "isPrivileged",
      "objectType": "/openidm/managed/assignment",
      "searchable": false,
      "type": "boolean",
    },
    "f1cc3b53-ef38-4ad7-b268-1ee482a411ef": {
      "allowedValues": [],
      "description": "Role Owner of Object",
      "displayName": "Role Owner",
      "id": "f1cc3b53-ef38-4ad7-b268-1ee482a411ef",
      "isIndexed": true,
      "isInternal": true,
      "isMultiValue": false,
      "managedObjectType": "/openidm/managed/user",
      "metadata": {
        "createdDate": "2025-10-27T18:13:17.537439106Z",
        "modifiedDate": "2025-10-27T18:13:17.537445426Z",
      },
      "name": "roleOwner",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "managedObject",
    },
    "f612d95d-7e9e-4ddb-8259-af0eb96f0714": {
      "allowedValues": [
        1,
        2,
      ],
      "description": "Test Integer",
      "displayName": "Test Integer",
      "enumeratedValues": [
        {
          "text": 0,
          "value": 1,
        },
        {
          "text": 1,
          "value": 2,
        },
      ],
      "id": "f612d95d-7e9e-4ddb-8259-af0eb96f0714",
      "isMultiValue": true,
      "metadata": {
        "createdDate": "2026-01-05T23:56:09.72294817Z",
        "modifiedDate": "2026-01-05T23:56:09.72294885Z",
      },
      "name": "Test Integer",
      "objectType": "/openidm/managed/role",
      "searchable": true,
      "type": "integer",
    },
  },
  "meta": Any<Object>,
}
`;

exports[`IgaGlossaryOps importGlossarySchemas() 1: Import None 1`] = `[]`;

exports[`IgaGlossaryOps importGlossarySchemas() 2: Import by ID 1`] = `
[
  {
    "allowedValues": [
      "Text One",
      "Text Two",
      "Text Three",
    ],
    "description": "Test String Description",
    "displayName": "Test String Display Name",
    "enumeratedValues": [
      {
        "text": "text1",
        "value": "Text One",
      },
      {
        "text": "text2",
        "value": "Text Two",
      },
      {
        "text": "text3",
        "value": "Text Three",
      },
    ],
    "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
    "isMultiValue": true,
    "name": "testString",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
]
`;

exports[`IgaGlossaryOps importGlossarySchemas() 3: Import by Name 1`] = `
[
  {
    "allowedValues": [
      "Text One",
      "Text Two",
      "Text Three",
    ],
    "description": "Test String Description",
    "displayName": "Test String Display Name",
    "enumeratedValues": [
      {
        "text": "text1",
        "value": "Text One",
      },
      {
        "text": "text2",
        "value": "Text Two",
      },
      {
        "text": "text3",
        "value": "Text Three",
      },
    ],
    "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
    "isMultiValue": true,
    "name": "testString",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
]
`;

exports[`IgaGlossaryOps importGlossarySchemas() 4: Import all 1`] = `
[
  {
    "allowedValues": [
      0,
      1,
      2,
    ],
    "description": "Test Integer Description",
    "displayName": "Test Integer Display Name",
    "enumeratedValues": [
      {
        "text": 1,
        "value": 0,
      },
      {
        "text": 2,
        "value": 1,
      },
      {
        "text": 3,
        "value": 2,
      },
    ],
    "id": "16c42f91-43a0-4b89-8ece-0221df554aa4",
    "isMultiValue": true,
    "name": "testInteger",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "integer",
  },
  {
    "allowedValues": [
      "Text One",
      "Text Two",
      "Text Three",
    ],
    "description": "Test String Description",
    "displayName": "Test String Display Name",
    "enumeratedValues": [
      {
        "text": "text1",
        "value": "Text One",
      },
      {
        "text": "text2",
        "value": "Text Two",
      },
      {
        "text": "text3",
        "value": "Text Three",
      },
    ],
    "id": "d27a22e1-8118-441f-b480-48c6b2e204d1",
    "isMultiValue": true,
    "name": "testString",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test Date Description",
    "displayName": "Test Date Display Name",
    "enumeratedValues": [],
    "id": "53565e80-767d-4181-8b36-e098c5585312",
    "isMultiValue": false,
    "name": "testDate",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "date",
  },
]
`;

exports[`IgaGlossaryOps readGlossarySchema() 1: Read existing glossary schema by ID 1`] = `
{
  "allowedValues": [],
  "description": "Test Boolean Description",
  "displayName": "Test Boolean Display Name",
  "enumeratedValues": [],
  "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
  "isMultiValue": false,
  "metadata": {
    "createdDate": "2026-01-21T21:25:52.866245593Z",
    "modifiedDate": "2026-01-21T21:25:52.866247223Z",
  },
  "name": "testBoolean",
  "objectType": "/openidm/managed/role",
  "searchable": true,
  "type": "boolean",
}
`;

exports[`IgaGlossaryOps readGlossarySchemaByNameAndObjectType() 1: Read existing glossary schema by name and objectype 1`] = `
{
  "allowedValues": [],
  "description": "Test Boolean Description",
  "displayName": "Test Boolean Display Name",
  "enumeratedValues": [],
  "id": "4332b18f-ad0a-4b16-abd5-af13bede31ae",
  "isMultiValue": false,
  "metadata": {
    "createdDate": "2026-01-21T21:25:52.866245593Z",
    "modifiedDate": "2026-01-21T21:25:52.866247223Z",
  },
  "name": "testBoolean",
  "objectType": "/openidm/managed/role",
  "searchable": true,
  "type": "boolean",
}
`;

exports[`IgaGlossaryOps readGlossarySchemas() 1: Read existing glossary schemas 1`] = `
[
  {
    "description": "custom attribute 1",
    "displayName": "Custom Attribute 6",
    "enumeratedValues": [],
    "id": "021ed7cf-116b-4003-9a63-a82431e44c8e",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:34.91522564Z",
      "modifiedDate": "2025-10-27T18:13:34.91523189Z",
    },
    "name": "customAttribute6",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Can the role be requested",
    "displayName": "Requestable",
    "id": "0806c0c5-a6e9-4ec8-8a36-830f217637b3",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": null,
    "metadata": {
      "createdDate": "2025-10-27T18:26:04.308367768Z",
      "modifiedDate": "2025-10-27T18:26:04.308373548Z",
    },
    "name": "requestable",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "boolean",
  },
  {
    "description": "Actors for the account",
    "displayName": "Actors",
    "enumeratedValues": [],
    "id": "09c470af-abc5-4733-beaf-3d169b62a234",
    "isInternal": true,
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2025-10-27T18:13:19.780130996Z",
      "modifiedDate": "2025-10-27T18:13:19.780138236Z",
    },
    "name": "actors",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "Risk Score",
    "displayName": "Risk Score",
    "enumeratedValues": [],
    "id": "0e1f922f-c9b9-40f2-964b-740f0ad47afb",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:28.850616006Z",
      "modifiedDate": "2025-10-27T18:13:28.850623326Z",
    },
    "name": "riskScore",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "float",
  },
  {
    "allowedValues": [],
    "description": "Description of entitlement",
    "displayName": "Description",
    "id": "0e9d9615-666b-4ae5-b6f3-43c6c1b6708e",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": null,
    "metadata": {
      "createdDate": "2025-10-27T18:26:00.277228797Z",
      "modifiedDate": "2025-10-27T18:26:00.277235677Z",
    },
    "name": "description",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "Is this account locked?",
    "displayName": "Locked",
    "enumeratedValues": [],
    "id": "12e51982-56a4-4f3d-9db1-2529276e2a05",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:21.772411471Z",
      "modifiedDate": "2025-10-27T18:13:21.772418601Z",
    },
    "name": "locked",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "description": "custom attribute 1",
    "displayName": "Custom Attribute 2",
    "enumeratedValues": [],
    "id": "1683c30a-b149-4bab-8187-5a67b0fe3704",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:30.903463463Z",
      "modifiedDate": "2025-10-27T18:13:30.903491063Z",
    },
    "name": "customAttribute2",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "Type of entitlement",
    "displayName": "Entitlement Type",
    "enumeratedValues": [],
    "id": "19e40504-7f0b-4df9-9ceb-bf23c0e3fda3",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:14:04.021339488Z",
      "modifiedDate": "2025-10-27T18:14:04.021344897Z",
    },
    "name": "entitlementType",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [
      "yes",
      "no",
    ],
    "description": "",
    "displayName": "Is Sensitive",
    "enumeratedValues": [
      {
        "text": "Yes",
        "value": "yes",
      },
      {
        "text": "No",
        "value": "no",
      },
    ],
    "id": "1adef4e6-accc-480c-9ff8-147171de8ee4",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-11-15T04:34:34.271336735Z",
      "modifiedDate": "2025-11-15T04:34:34.271338995Z",
    },
    "name": "sensitive",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [
      0,
      1,
      2,
    ],
    "description": "Test Integer Description",
    "displayName": "Test Integer Display Name",
    "enumeratedValues": [
      {
        "text": 1,
        "value": 0,
      },
      {
        "text": 2,
        "value": 1,
      },
      {
        "text": 3,
        "value": 2,
      },
    ],
    "id": "21e2030f-33ef-49d3-8154-00dd1c7bb7ce",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-01-21T21:25:54.025452903Z",
      "modifiedDate": "2026-01-21T21:25:54.025454763Z",
    },
    "name": "testInteger",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "integer",
  },
  {
    "allowedValues": [],
    "description": "Test Role Description",
    "displayName": "Test Role Display Name",
    "enumeratedValues": [],
    "id": "271c3863-034a-4f1b-9d6e-48206b969871",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/role",
    "metadata": {
      "createdDate": "2026-01-21T21:25:58.125869102Z",
      "modifiedDate": "2026-01-21T21:25:58.125870192Z",
    },
    "name": "testRole",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [
      "sales",
      "finance",
      "hr",
      "null",
    ],
    "description": "Application grant workflows example for LOB determines who it should go to",
    "displayName": "Line Of Business",
    "enumeratedValues": [
      {
        "text": "Sales",
        "value": "sales",
      },
      {
        "text": "Finance",
        "value": "finance",
      },
      {
        "text": "Human Resources",
        "value": "hr",
      },
      {
        "text": "Other",
        "value": "null",
      },
    ],
    "id": "2a1017db-6a09-4562-b73e-fdb706bd212c",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-11-15T04:31:18.709667735Z",
      "modifiedDate": "2025-11-15T04:31:18.709668985Z",
    },
    "name": "lineOfBusiness",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "custom attribute 8",
    "displayName": "Custom Attribute 8",
    "enumeratedValues": [],
    "id": "2a36a687-91c0-4fdc-8c73-b001618c2bc6",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:36.931921121Z",
      "modifiedDate": "2025-10-27T18:13:36.931928051Z",
    },
    "name": "customAttribute8",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "custom attribute 5",
    "displayName": "Custom Attribute 5",
    "enumeratedValues": [],
    "id": "2a9ce603-14d8-4689-8b2e-78829648b5b6",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:33.925339896Z",
      "modifiedDate": "2025-10-27T18:13:33.925347816Z",
    },
    "name": "customAttribute5",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "Confidence Score",
    "displayName": "Confidence Score",
    "enumeratedValues": [],
    "id": "35094c80-ab3d-4c47-91ae-92175895b264",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:27.843796005Z",
      "modifiedDate": "2025-10-27T18:13:27.843802734Z",
    },
    "name": "confidenceScore",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "float",
  },
  {
    "allowedValues": [
      "Text One",
      "Text Two",
      "Text Three",
    ],
    "description": "Test String Description",
    "displayName": "Test String Display Name",
    "enumeratedValues": [
      {
        "text": "text1",
        "value": "Text One",
      },
      {
        "text": "text2",
        "value": "Text Two",
      },
      {
        "text": "text3",
        "value": "Text Three",
      },
    ],
    "id": "39c34bda-2942-425e-80f1-3b803cd1331e",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-01-21T21:25:55.047657195Z",
      "modifiedDate": "2026-01-21T21:25:55.047658305Z",
    },
    "name": "testString",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Entitlement Owner of Object",
    "displayName": "Entitlement Owner",
    "id": "5807928e-804d-4fed-a887-33fd3d157a8f",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/user",
    "metadata": {
      "createdDate": "2025-10-27T18:26:01.270155621Z",
      "modifiedDate": "2025-10-27T18:26:01.270163381Z",
    },
    "name": "entitlementOwner",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "managedObject",
  },
  {
    "allowedValues": [],
    "description": "Test User Description",
    "displayName": "Test User Display Name",
    "enumeratedValues": [],
    "id": "5ba7796d-ac31-4ba9-b5b3-ecaa38854835",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/user",
    "metadata": {
      "createdDate": "2026-01-21T21:25:57.058901461Z",
      "modifiedDate": "2026-01-21T21:25:57.058903161Z",
    },
    "name": "testUser",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [],
    "description": "Can the entitlement be requested",
    "displayName": "Requestable",
    "id": "5c5751e7-d0e3-4338-a198-ecfe33175ed6",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": null,
    "metadata": {
      "createdDate": "2025-10-27T18:26:02.398398257Z",
      "modifiedDate": "2025-10-27T18:26:02.398403587Z",
    },
    "name": "requestable",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [
      "yes",
      "no",
    ],
    "description": "",
    "displayName": "Is Sensitive",
    "enumeratedValues": [
      {
        "text": "Yes",
        "value": "yes",
      },
      {
        "text": "No",
        "value": "no",
      },
    ],
    "id": "5e9a4da3-612c-4f4b-a1d6-5b65aa5a242a",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-11-15T04:32:41.87757229Z",
      "modifiedDate": "2025-11-15T04:32:41.87757368Z",
    },
    "name": "sensitive",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "The subtype of the account",
    "displayName": "Account Subtype",
    "enumeratedValues": [],
    "id": "5ef5a92e-c2e4-40e4-b232-e33649591b37",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:40.980726934Z",
      "modifiedDate": "2025-10-27T18:13:40.980781544Z",
    },
    "name": "accountSubtype",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "Last password change date",
    "displayName": "Last Password Change",
    "enumeratedValues": [],
    "id": "61bf2199-c60a-4383-9457-2fe211d72c85",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:26.820775485Z",
      "modifiedDate": "2025-10-27T18:13:26.820782975Z",
    },
    "name": "lastPasswordChange",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "date",
  },
  {
    "allowedValues": [],
    "description": "Test User",
    "displayName": "Test User",
    "enumeratedValues": [],
    "id": "61cc57f7-adc5-4db5-952a-82750f16dc7a",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/user",
    "metadata": {
      "createdDate": "2026-01-05T23:57:38.461977852Z",
      "modifiedDate": "2026-01-05T23:57:38.461978072Z",
    },
    "name": "Test User",
    "objectType": "/openidm/managed/role",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "description": "Does the account have any SoD violations?",
    "displayName": "Has Policy Violations",
    "enumeratedValues": [],
    "id": "6a1ea40d-d85d-4646-9331-73a048196fbf",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:25.811651105Z",
      "modifiedDate": "2025-10-27T18:13:25.811658965Z",
    },
    "name": "hasPolicyViolations",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Test Boolean Description",
    "displayName": "Test Boolean Display Name",
    "enumeratedValues": [],
    "id": "6b2d0684-e883-4723-aa59-2b725ab62ad4",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-01-21T21:25:52.866245593Z",
      "modifiedDate": "2026-01-21T21:25:52.866247223Z",
    },
    "name": "testBoolean",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "boolean",
  },
  {
    "description": "Is this account an active account",
    "displayName": "Active",
    "enumeratedValues": [],
    "id": "71c188ff-ed53-438c-9476-043cba6e850b",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:20.774670219Z",
      "modifiedDate": "2025-10-27T18:13:20.774676549Z",
    },
    "name": "active",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [
      1.5,
      3.5,
    ],
    "description": "Test Double",
    "displayName": "Test Double",
    "enumeratedValues": [
      {
        "text": 0.5,
        "value": 1.5,
      },
      {
        "text": 2.5,
        "value": 3.5,
      },
    ],
    "id": "7375e4a5-709c-4cec-b588-d4418b9d4d06",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-01-05T23:56:43.81662401Z",
      "modifiedDate": "2026-01-05T23:56:43.8166248Z",
    },
    "name": "Test Double",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "integer",
  },
  {
    "allowedValues": [],
    "description": "Test Boolean",
    "displayName": "Test Boolean",
    "enumeratedValues": [],
    "id": "774d2515-6cb4-408d-bdae-63b7534dde39",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-01-05T23:57:19.037709455Z",
      "modifiedDate": "2026-01-06T17:20:07.542Z",
    },
    "name": "Test Boolean",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "boolean",
  },
  {
    "description": "custom attribute 1",
    "displayName": "Custom Attribute 3",
    "enumeratedValues": [],
    "id": "8994aea6-96d7-4070-bb1b-f8f36576a23e",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:31.887340456Z",
      "modifiedDate": "2025-10-27T18:13:31.887347207Z",
    },
    "name": "customAttribute3",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test Date",
    "displayName": "Test Date",
    "enumeratedValues": [],
    "id": "8a7a8612-38bc-453c-969e-99ebced2bf47",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-01-05T23:57:27.599681613Z",
      "modifiedDate": "2026-01-12T17:37:13.694Z",
    },
    "name": "Test Date",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "date",
  },
  {
    "allowedValues": [
      "yes",
      "no",
    ],
    "description": "",
    "displayName": "Is Sensitive",
    "enumeratedValues": [
      {
        "text": "Yes",
        "value": "yes",
      },
      {
        "text": "No",
        "value": "no",
      },
    ],
    "id": "97d02b06-0c26-4903-8d0a-02ef4326e45e",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-11-15T04:36:21.999006557Z",
      "modifiedDate": "2025-11-15T04:36:21.999008468Z",
    },
    "name": "sensitive",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "Is this account a privileged account",
    "displayName": "Privileged",
    "enumeratedValues": [],
    "id": "982113c6-3e20-401d-91a8-657cf429f85e",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:18.776130434Z",
      "modifiedDate": "2025-10-27T18:13:18.776137014Z",
    },
    "name": "privileged",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Test Organization Description",
    "displayName": "Test Organization Display Name",
    "enumeratedValues": [],
    "id": "9a79542e-79e5-4958-8ee8-0e130f676350",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/organization",
    "metadata": {
      "createdDate": "2026-01-21T21:25:56.185811775Z",
      "modifiedDate": "2026-01-21T21:25:56.185812715Z",
    },
    "name": "testOrg",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "description": "Confidence Score",
    "displayName": "Confidence Score",
    "enumeratedValues": [],
    "id": "a65b7633-3dcb-4c83-8458-c14397f70715",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:41.990680485Z",
      "modifiedDate": "2025-10-27T18:13:41.990686335Z",
    },
    "name": "confidenceScore",
    "objectType": "/iga/governance/entitlementGrant",
    "searchable": true,
    "type": "float",
  },
  {
    "description": "custom attribute 10",
    "displayName": "Custom Attribute 10",
    "enumeratedValues": [],
    "id": "a65b7633-3dcb-4c83-8458-c14397f70717",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:38.983976209Z",
      "modifiedDate": "2025-10-27T18:13:38.983985449Z",
    },
    "name": "customAttribute10",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Can the application be requested",
    "displayName": "Requestable",
    "id": "a7082d02-e673-4935-95d5-22c76c669cb4",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": null,
    "metadata": {
      "createdDate": "2025-10-27T18:26:03.309691431Z",
      "modifiedDate": "2025-10-27T18:26:03.309696751Z",
    },
    "name": "requestable",
    "objectType": "/openidm/managed/application",
    "searchable": true,
    "type": "boolean",
  },
  {
    "description": "Is this account manuallyCorrelated",
    "displayName": "Manually Correlated",
    "enumeratedValues": [],
    "id": "a98091ec-0800-41ec-9ca0-4f5ec4f4a853",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:23.798074722Z",
      "modifiedDate": "2025-10-27T18:13:23.798082492Z",
    },
    "name": "manuallyCorrelated",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "boolean",
  },
  {
    "description": "Entitlement that is the direct parent of this entitlement",
    "displayName": "Parent Entitlement",
    "enumeratedValues": [],
    "id": "b0bee61a-791b-44bf-a3b9-b6fec52df4f7",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:14:03.579746339Z",
      "modifiedDate": "2025-10-27T18:14:03.579750768Z",
    },
    "name": "parentEntitlement",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "custom attribute 4",
    "displayName": "Custom Attribute 4",
    "enumeratedValues": [],
    "id": "b1f1f37a-4134-43cd-8220-957cefbbe44e",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:32.900052397Z",
      "modifiedDate": "2025-10-27T18:13:32.900063547Z",
    },
    "name": "customAttribute4",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "custom attribute 7",
    "displayName": "Custom Attribute 7",
    "enumeratedValues": [],
    "id": "b42b143f-b33b-4b25-9448-2c9ff88e7ed5",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:35.92383714Z",
      "modifiedDate": "2025-10-27T18:13:35.923853001Z",
    },
    "name": "customAttribute7",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "Show last successful Login",
    "displayName": "Last Successful Login",
    "enumeratedValues": [],
    "id": "bab632ff-9e7a-4a9d-a91b-c081ce091df7",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:22.790654101Z",
      "modifiedDate": "2025-10-27T18:13:22.790660471Z",
    },
    "name": "lastSuccessfulLogin",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "date",
  },
  {
    "allowedValues": [],
    "description": "Test Role",
    "displayName": "Test Role",
    "enumeratedValues": [],
    "id": "c0d06566-9970-403f-b3da-7934f5038cdf",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/role",
    "metadata": {
      "createdDate": "2026-01-05T23:57:48.952302776Z",
      "modifiedDate": "2026-01-05T23:57:48.952303426Z",
    },
    "name": "Test Role",
    "objectType": "/openidm/managed/role",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "allowedValues": [
      "Value 1",
      "Value 2",
    ],
    "description": "Test String",
    "displayName": "Test String",
    "enumeratedValues": [
      {
        "text": "Text 1",
        "value": "Value 1",
      },
      {
        "text": "Text 2",
        "value": "Value 2",
      },
    ],
    "id": "c5a899bb-9e14-416b-8334-38b15b85c481",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-01-05T23:55:24.106927059Z",
      "modifiedDate": "2026-01-05T23:55:24.106927859Z",
    },
    "name": "Test String",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [
      "high",
      "medium",
      "low",
      "null",
    ],
    "description": "",
    "displayName": "Risk Level",
    "enumeratedValues": [
      {
        "text": "High",
        "value": "high",
      },
      {
        "text": "Medium",
        "value": "medium",
      },
      {
        "text": "Low",
        "value": "low",
      },
      {
        "text": "Other",
        "value": "null",
      },
    ],
    "id": "c865c5e0-ea91-4a6d-8ecf-ed106d8a96a8",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-11-15T04:35:38.004567499Z",
      "modifiedDate": "2025-11-15T04:35:38.004568899Z",
    },
    "name": "riskLevel",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "The type of account",
    "displayName": "Account Type",
    "enumeratedValues": [],
    "id": "c8ed99f7-5442-43d5-8406-f39060c1bd73",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:39.982168872Z",
      "modifiedDate": "2025-10-27T18:13:39.982176142Z",
    },
    "name": "accountType",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "custom attribute 9",
    "displayName": "Custom Attribute 9",
    "enumeratedValues": [],
    "id": "c9647722-5927-4826-9398-5349b56f793a",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:37.946863301Z",
      "modifiedDate": "2025-10-27T18:13:37.946870841Z",
    },
    "name": "customAttribute9",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Testing",
    "displayName": "CP Dummy Entitlement",
    "enumeratedValues": [],
    "id": "cf2c7d75-4dc8-464e-959b-99b157b5176f",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2026-01-06T18:31:50.614010455Z",
      "modifiedDate": "2026-01-06T18:32:02.151Z",
    },
    "name": "CP-DummyEntitlement",
    "objectType": "/openidm/managed/assignment",
    "searchable": true,
    "type": "string",
  },
  {
    "description": "custom attribute 1",
    "displayName": "Custom Attribute 1",
    "enumeratedValues": [],
    "id": "d4cf00ae-f4b3-42b8-b2a6-b960a8d620dc",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:29.870208095Z",
      "modifiedDate": "2025-10-27T18:13:29.870215705Z",
    },
    "name": "customAttribute1",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "string",
  },
  {
    "allowedValues": [],
    "description": "Test Organization",
    "displayName": "Test Organization",
    "enumeratedValues": [],
    "id": "dad7d3b0-208f-464d-9857-243dc1cb14d1",
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/organization",
    "metadata": {
      "createdDate": "2026-01-05T23:57:59.512417969Z",
      "modifiedDate": "2026-01-05T23:57:59.512418849Z",
    },
    "name": "Test Organization",
    "objectType": "/openidm/managed/role",
    "searchable": false,
    "type": "managedObject",
  },
  {
    "description": "When was account reconciled successfully",
    "displayName": "Last Sync",
    "enumeratedValues": [],
    "id": "de06ffdb-0186-4fff-b1a9-ab26a1aa3fab",
    "isInternal": true,
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-10-27T18:13:24.803517454Z",
      "modifiedDate": "2025-10-27T18:13:24.803524294Z",
    },
    "name": "lastSync",
    "objectType": "/iga/governance/account",
    "searchable": true,
    "type": "date",
  },
  {
    "allowedValues": [],
    "description": "",
    "displayName": "Is Privileged",
    "enumeratedValues": [],
    "id": "e5677d73-4c84-46a4-bf0c-a01590db8b74",
    "isMultiValue": false,
    "metadata": {
      "createdDate": "2025-11-15T04:33:33.242372625Z",
      "modifiedDate": "2025-11-15T04:33:33.242373765Z",
    },
    "name": "isPrivileged",
    "objectType": "/openidm/managed/assignment",
    "searchable": false,
    "type": "boolean",
  },
  {
    "allowedValues": [],
    "description": "Role Owner of Object",
    "displayName": "Role Owner",
    "id": "f1cc3b53-ef38-4ad7-b268-1ee482a411ef",
    "isIndexed": true,
    "isInternal": true,
    "isMultiValue": false,
    "managedObjectType": "/openidm/managed/user",
    "metadata": {
      "createdDate": "2025-10-27T18:13:17.537439106Z",
      "modifiedDate": "2025-10-27T18:13:17.537445426Z",
    },
    "name": "roleOwner",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "managedObject",
  },
  {
    "allowedValues": [
      1,
      2,
    ],
    "description": "Test Integer",
    "displayName": "Test Integer",
    "enumeratedValues": [
      {
        "text": 0,
        "value": 1,
      },
      {
        "text": 1,
        "value": 2,
      },
    ],
    "id": "f612d95d-7e9e-4ddb-8259-af0eb96f0714",
    "isMultiValue": true,
    "metadata": {
      "createdDate": "2026-01-05T23:56:09.72294817Z",
      "modifiedDate": "2026-01-05T23:56:09.72294885Z",
    },
    "name": "Test Integer",
    "objectType": "/openidm/managed/role",
    "searchable": true,
    "type": "integer",
  },
]
`;

exports[`IgaGlossaryOps updateGlossarySchema() 1: Update existing glossary schema 1`] = `
{
  "allowedValues": [
    0,
    1,
    2,
  ],
  "description": "Test Integer Description",
  "displayName": "Test Integer Display Name",
  "enumeratedValues": [
    {
      "text": 1,
      "value": 0,
    },
    {
      "text": 2,
      "value": 1,
    },
    {
      "text": 3,
      "value": 2,
    },
  ],
  "id": "16c42f91-43a0-4b89-8ece-0221df554aa4",
  "isMultiValue": true,
  "name": "testInteger",
  "objectType": "/openidm/managed/assignment",
  "searchable": false,
  "type": "integer",
}
`;
